<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4a4a4a"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="openHelp"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHighScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="openHighScores"
        android:text="@string/high_scores"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="startHard"
        android:text="@string/hard"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonHighScores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="startMedium"
        android:text="@string/medium"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonHard" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="startEasy"
        android:text="@string/easy"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonMedium" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo15"
        app:layout_constraintBottom_toTopOf="@+id/buttonEasy"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>